<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Newuser"
    android:background="@drawable/background_image"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/hint_name" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/passward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passward"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/reenterpassward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_reenterpassward"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_branch"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerHorizontal="true"
        android:background="@color/button_cardview"
        android:layout_margin="20dp"
        android:elevation="10dp">

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create"
            android:background="@color/button_cardview"/>
    </android.support.v7.widget.CardView>

</RelativeLayout>