<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/background_image">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="No User..."
            android:textSize="40dp"
            android:textStyle="italic" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/user_logo" />

        <TextView
            android:id="@+id/branch"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Branch:"/>


    </LinearLayout>




  <LinearLayout
      android:id="@+id/layout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_below="@id/layout1"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="50dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp">


      <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_username"/>


      <EditText
          android:id="@+id/passowrd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:hint="@string/hint_passward"
       />
      <TextView
          android:id="@+id/forgotPasswod"
          android:text="forgot password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:textColor="#000fff"/>

  </LinearLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
       android:background="@color/button_cardview"
        android:elevation="10dp">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:shadowColor="@color/shadowcolor"
            android:background="@color/button_cardview"/>
    </android.support.v7.widget.CardView>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/cardview"
       android:layout_centerHorizontal="true"
       android:orientation="vertical"
       android:gravity="center">

       <TextView
           android:id="@+id/createnewaccount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="create new account"
           android:layout_marginTop="20dp"
           android:textColor="@color/textview"/>

       <View
           android:layout_width="130dp"
           android:layout_height="1dp"
           android:background="@color/textview"/>
   </LinearLayout>


</RelativeLayout>